--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "request": "^2.88.2",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
