--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "firebase": "^9.12.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
